--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="OctWa - A secure browser-based wallet for the Octra blockchain network. Encrypted by Default."
     />
     <meta name="theme-color" content="#1a1a1a" />
-    <title>OctWa — Octra Wallet</title>
+    <title>OctWa - Octra Wallet</title>
     <link rel="icon" type="image/png" sizes="32x32" href="./octwa32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./octwa16x16.png" />
     <link rel="apple-touch-icon" sizes="128x128" href="./octwa128x128.png" />
