--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     />
     <meta name="theme-color" content="#1a1a1a" />
     <title>OctWa - Octra Wallet</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="./octwa32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./octwa16x16.png" />
-    <link rel="apple-touch-icon" sizes="128x128" href="./octwa128x128.png" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 50 50'%3E%3Ccircle cx='25' cy='25' r='21' stroke='%233A4DFF' stroke-width='8' fill='none'/%3E%3Ccircle cx='25' cy='25' r='9' fill='%233A4DFF'/%3E%3C/svg%3E" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
